enhance: `endpoints`: add endpoint fields `primaryAccountType`, `serviceAccountAccessQuery`
